--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
               </textPath>
             </text>
           </svg> -->
-          <svg viewBox="0 0 800 170"> <path id="curve" d="M 0 80 Q 400 0 800 80"  fill="transparent"/> <text x="25"> 
-              <textPath xlink:href="#curve" letter-spacing="15" font-size="40px"> 
-                ACNH Villager Generator
+          <svg viewBox="0 0 800 130"> <path id="curve" d="M 40 80 Q 400 0 800 80"  fill="transparent"/> <text x="15"> 
+              <textPath class="curve" xlink:href="#curve" letter-spacing="11" font-size="45px"> 
+                Meet An ACNH Villager
                 </textPath>
              </text> 
             </svg>
