Fixed media queries and styling

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
             </text>
           </svg> -->
           <svg viewBox="0 0 800 130"> <path id="curve" d="M 40 80 Q 400 0 800 80"  fill="transparent"/> <text x="15"> 
-              <textPath class="curve" xlink:href="#curve" letter-spacing="11" font-size="45px"> 
+              <textPath class="curve" xlink:href="#curve" letter-spacing="11"> 
                 Meet An ACNH Villager
                 </textPath>
+
              </text> 
             </svg>
           
